--- a/index.html
+++ b/index.html
@@ -515,6 +515,16 @@
               </div>
             </div>
           </div>
+		   <div class="col-md-4 d-flex ftco-animate">
+          	<div class="blog-entry justify-content-end">
+              <a href="https://github.com/jayeshpagar070/Django-Ecommerce_Website" class="block-20 zoom-effect" style="background-image: url('images/project_4.jpeg');">
+              </a>
+		  <div class="text mt-3 float-right d-block">
+                <h3 class="heading"><a href="https://github.com/jayeshpagar070/Django-Ecommerce_Website">Ecommerce Dyanamic Website</a></h3>
+                <p>This project showcases a dynamic website built using Django, featuring a modern and responsive design. The website leverages various technologies to provide a robust and scalable web application. </p>
+              </div>
+            </div>
+          </div>
     </section>
 
 	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
