--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2023-2024</span>
+						<span class="date">Dec 2023- May 2024</span>
 						<h2>Django Developer</h2>
 						<span class="position">AI Alpha Tech</span>
 						<p class="mt-4">AI Alpha Tech is at the forefront of artificial intelligence and technology innovation.  
@@ -347,7 +347,7 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2023-2023</span>
+						<span class="date">Apr 2023- July 2023</span>
 						<h2>Automation Test Engineer</h2>
 						<span class="position">AI Variant</span>
 						<p class="mt-4">AI Variant is an analytics firm, and have deep analytics expertise as well as domain expertise in various industries. 
