--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
 								<p class="mb-4">
-									<span class="number" data-number="2">0</span> <span>+</span>
+									<span class="number" data-number="3">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
 								<p><a href="https://www.linkedin.com/in/jayesh-pagar-333019" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
@@ -323,7 +323,7 @@
         </div>
 
 		<div class="row">
-			<h1 class="big-4">Internships</h1>
+			<h1 class="big-4">Professional Experience</h1>
 			<div class="underline"></div>
 		</div>
 		<br>
@@ -331,7 +331,7 @@
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Dec 2023- May 2024</span>
+						<span class="date">Aug 2023- Present</span>
 						<h2>Django Developer</h2>
 						<span class="position">AI Alpha Tech</span>
 						<p class="mt-4">AI Alpha Tech is at the forefront of artificial intelligence and technology innovation.  
