--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Jayesh Pagar</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Python Developer</span></p>
-										<p><span class="title-s">Experience: </span> <span>Fresher</span></p>
+										<p><span class="title-s">Experience: </span> <span>1 year</span></p>
 										<p><span class="title-s">Address: </span> <span>Nashik, India</span></p>
 									  </div>
 									</div>
