--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Jayesh Pagar</span></p>
-										<p><span class="title-s">Job Role: </span> <span>Python Developer</span></p>
-										<p><span class="title-s">Experience: </span> <span> 1 year</span></p>
+										<p><span class="title-s">Job Role: </span> <span> Associate Engineer</span></p>
+										<p><span class="title-s">Experience: </span> <span> 10 months</span></p>
 										<p><span class="title-s">Address: </span> <span>Nashik, India</span></p>
 									  </div>
 									</div>
@@ -331,8 +331,8 @@
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Aug 2023- Present</span>
-						<h2>Django Developer</h2>
+						<span class="date">Dec 2023- Present</span>
+						<h2>Associate Engineer</h2>
 						<span class="position">AI Alpha Tech</span>
 						<p class="mt-4">AI Alpha Tech is at the forefront of artificial intelligence and technology innovation.  
 							<ul>
